--- a/index.html
+++ b/index.html
@@ -19,8 +19,20 @@
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;1,500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="src/style.css" />
     <title>👩‍💻 Piera Bellelli - Portfolio</title>
   </head>
-  <body></body>
+  <body>
+    <h2 class="text-center">Hello, I'am</h2>
+    <h1 class="text-center">Piera Bellelli</h1>
+    <h3 class="text-center">Front developer and SEO copy based in Italy</h3>
+  </body>
 </html>
