adding icons kit

--- a/about.html
+++ b/about.html
@@ -22,6 +22,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;1,500&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/6284290218.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>About Me</title>
   </head>
