--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;1,500&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/6284290218.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>👩‍💻 Piera Bellelli - Portfolio</title>
   </head>
@@ -34,5 +38,6 @@
     <h2 class="text-center">Hello, I'am</h2>
     <h1 class="text-center">Piera Bellelli</h1>
     <h3 class="text-center">Front developer and SEO copy based in Italy</h3>
+    <i class="fa-brands fa-linkedin"></i>
   </body>
 </html>
