--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
     <title>👩‍💻 Piera Bellelli - Portfolio</title>
   </head>
   <body>
-    <h2 class="text-center">Hello, I'am</h2>
-    <h1 class="text-center">Piera Bellelli</h1>
-    <h3 class="text-center">Front developer and SEO copy based in Italy</h3>
-    <i class="fa-brands fa-linkedin"></i>
+    <div class="hero">
+      <h2 class="text-center">Hello, I'am</h2>
+      <h1 class="text-center">Piera Bellelli</h1>
+      <h3 class="text-center mb-5">
+        Front developer and SEO copy based in Italy
+      </h3>
+      <a href="#" class="btn btn-danger p-2">Contact Me</a>
+    </div>
   </body>
 </html>
