--- a/index.html
+++ b/index.html
@@ -43,5 +43,35 @@
       </h3>
       <a href="#" class="btn btn-danger p-2">Contact Me</a>
     </div>
+    <div class="container">
+      <p class="text-center m-5">My recent works</p>
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img
+            class="img-fluid rounded"
+            src="img/weather-app.png"
+            alt="weather app"
+          />
+        </div>
+        <div class="col-6">
+          <div class="project-descr">
+            <h2 class="mb-5 title">Weather app</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea nam,
+              tenetur dignissimos, cumque nulla deserunt doloremque recusandae
+              quisquam accusamus aperiam assumenda labore nisi? Pariatur rem
+              quidem eaque fuga reprehenderit delectus.
+            </p>
+            <a
+              href="https://dazzling-kitsune-7c3c2f.netlify.app/"
+              target="_blank"
+              title="Weather App Piera Bellelli"
+              class="btn btn-danger outline p-2"
+              >Weather App</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
