improve content home

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="container">
       <p class="text-center m-5">My recent works</p>
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
           <img
             class="img-fluid rounded"
@@ -70,6 +70,33 @@
               >Weather App</a
             >
           </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col-6">
+          <div class="project-descr">
+            <h2 class="mb-5 title">World Clock app</h2>
+            <p class="mb-5 text-muted">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea nam,
+              tenetur dignissimos, cumque nulla deserunt doloremque recusandae
+              quisquam accusamus aperiam assumenda labore nisi? Pariatur rem
+              quidem eaque fuga reprehenderit delectus.
+            </p>
+            <a
+              href="https://precious-stardust-bcc2a9.netlify.app/"
+              target="_blank"
+              title="World Clock App Piera Bellelli"
+              class="btn btn-danger outline p-2"
+              >World Clock App</a
+            >
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            class="img-fluid rounded"
+            src="img/world-clock.png"
+            alt="weather app"
+          />
         </div>
       </div>
     </div>
