--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2 class="text-center">Hello, I'am</h2>
       <h1 class="text-center">Piera Bellelli</h1>
       <h3 class="text-center mb-5">
-        Front developer and SEO copy based in Italy
+        Front developer and SEO-copy based in Italy
       </h3>
       <a href="#" class="btn btn-danger p-2">Contact Me</a>
     </div>
