--- a/about.html
+++ b/about.html
@@ -29,5 +29,33 @@
     <link rel="stylesheet" href="src/style.css" />
     <title>About Me</title>
   </head>
-  <body></body>
+  <body>
+    <div class="hero-about">
+      <div class="row">
+        <div class="col-6">
+          <div class="about-section">
+            <h1 class="text-center mb-4">Hi I am Piera Bellelli</h1>
+            <h2 class="text-center mb-4">
+              Front and developer and SEO-copy based in Italy
+            </h2>
+            <p class="mb-4">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae
+              facere sed neque quis incidunt ad ea voluptatum officiis provident
+              iure, ullam itaque sapiente laboriosam enim, ut sit magni! Odit,
+              cumque?
+            </p>
+            <a class="btn btn-danger p-2" href="">View my projects</a>
+          </div>
+        </div>
+
+        <div class="col-md-6">
+          <img
+            src="img/pic_bio.png"
+            alt="Piera Bellelli"
+            class="img-fluid rounded"
+          />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
