--- a/about.html
+++ b/about.html
@@ -53,6 +53,7 @@
             src="img/pic_bio.png"
             alt="Piera Bellelli"
             class="img-fluid rounded"
+            width="450"
           />
         </div>
       </div>
