--- a/work.html
+++ b/work.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Piera Bellelli Portofolio - About Me" />
+    <meta
+      name="description"
+      content="Piera Bellelli Portofolio - Developer & Copy"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -18,6 +21,8 @@
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;1,500&display=swap"
       rel="stylesheet"
@@ -27,34 +32,41 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>About Me</title>
+    <title>👩‍💻 Piera Bellelli - Works</title>
   </head>
   <body>
     <div class="content-container">
-      <div class="row">
-        <div class="col-6">
-          <div class="content-section">
-            <h1 class="text-center mb-4">Hi I am Piera Bellelli</h1>
-            <h2 class="text-center mb-4">
-              Front and developer and SEO-copy based in Italy
-            </h2>
-            <p class="mb-4">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae
-              facere sed neque quis incidunt ad ea voluptatum officiis provident
-              iure, ullam itaque sapiente laboriosam enim, ut sit magni! Odit,
-              cumque?
+      <div class="content-section">
+        <h1 class="text-center mb-4">
+          Take a look at what I am been working on
+        </h1>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="/img/weather-app.png"
+              alt="weather app"
+              class="img-fluid rounded mb-3"
+              width="400"
+            />
+            <h3 class="text-center">Weather App</h3>
+            <p class="text-center text-muted">
+              A wheater App realized using HTML, CSS, JavaScript integrating
+              some API.
             </p>
-            <a class="btn btn-danger p-2" href="">View my projects</a>
           </div>
-        </div>
-
-        <div class="col-md-6">
-          <img
-            src="img/pic_bio.png"
-            alt="Piera Bellelli"
-            class="img-fluid rounded"
-            width="450"
-          />
+          <div class="col-6">
+            <img
+              src="/img/world-clock.png"
+              alt="wolrd clock app"
+              class="img-fluid rounded mb-3"
+              width="400"
+            />
+            <h3 class="text-center">World Clock App</h3>
+            <p class="text-center text-muted">
+              A world clock App realized using HTML, CSS, JavaScript integrating
+              some API.
+            </p>
+          </div>
         </div>
       </div>
     </div>
