--- a/contact.html
+++ b/contact.html
@@ -31,5 +31,23 @@
     <link rel="stylesheet" href="src/style.css" />
     <title>Piera Bellelli - Contact <menu></menu></title>
   </head>
-  <body></body>
+  <body>
+    <div class="content-container">
+      <div class="content-section">
+        <h1 class="text-start">Let's get in touch</h1>
+        <h3 class="text-start fw-bold">Email</h3>
+        <p class="text-start">
+          <a href="mailto:piera.bellelli@gmail.com">piera.bellelli@gmail.com</a>
+        </p>
+
+        <h3 class="text-start fw-bold">LinkedIn</h3>
+        <p class="text-start">
+          <a href="https://www.linkedin.com/in/piera-bellelli-4b6929215/"
+            >@pierabellelli</a
+          >
+        </p>
+        >
+      </div>
+    </div>
+  </body>
 </html>
