--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
           <div class="col-6">
             <img
               src="/img/world-clock.png"
-              alt="wolrd clock app"
+              alt="world clock app"
               class="img-fluid rounded mb-3"
               width="400"
             />
