--- a/about.html
+++ b/about.html
@@ -30,6 +30,18 @@
     <title>About Me</title>
   </head>
   <body>
+    <header>
+      <div class="container-nav">
+        <nav class="d-flex justify-content-end">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/about.html">About Me</a></li>
+            <li><a href="/work.html">Works</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <div class="content-container">
       <div class="row">
         <div class="col-6">
