--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@
     <title>👩‍💻 Piera Bellelli - Portfolio</title>
   </head>
   <body>
+    <header>
+      <div class="container-nav">
+        <nav class="d-flex justify-content-end">
+          <ul>
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="/about.html">About Me</a></li>
+            <li><a href="/work.html">Works</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="container-fluid"></div>
     <div class="hero">
       <h2 class="text-center">Hello, I'am</h2>
       <h1 class="text-center">Piera Bellelli</h1>
