--- a/work.html
+++ b/work.html
@@ -35,6 +35,18 @@
     <title>👩‍💻 Piera Bellelli - Works</title>
   </head>
   <body>
+    <header>
+      <div class="container-nav">
+        <nav class="d-flex justify-content-end">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About Me</a></li>
+            <li class="active"><a href="/work.html">Works</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <div class="content-container">
       <div class="content-section">
         <h1 class="text-center mb-4">
