--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,18 @@
     <title>Piera Bellelli - Contact <menu></menu></title>
   </head>
   <body>
+    <header>
+      <div class="container-nav">
+        <nav class="d-flex justify-content-end">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About Me</a></li>
+            <li><a href="/work.html">Works</a></li>
+            <li class="active"><a href="/contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <div class="content-container">
       <div class="content-section">
         <h1 class="text-start">Let's get in touch</h1>
