--- a/about.html
+++ b/about.html
@@ -35,9 +35,13 @@
         <nav class="d-flex justify-content-end">
           <ul>
             <li><a href="/">Home</a></li>
-            <li class="active"><a href="/about.html">About Me</a></li>
-            <li><a href="/work.html">Works</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li class="active">
+              <a href="/about.html" title="Piera Bellelli about">About Me</a>
+            </li>
+            <li><a href="/work.html" title="Piera Bellelli works">Works</a></li>
+            <li>
+              <a href="/contact.html" title="Piera Bellelli contact">Contact</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -56,7 +60,12 @@
               iure, ullam itaque sapiente laboriosam enim, ut sit magni! Odit,
               cumque?
             </p>
-            <a class="btn btn-danger p-2" href="">View my projects</a>
+            <a
+              class="btn btn-danger p-2"
+              href=""
+              title="Piera Bellelli projects"
+              >View my projects</a
+            >
           </div>
         </div>
 
