--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Piera Bellelli Portofolio - Developer & Copy"
     />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -108,7 +109,7 @@
           <img
             class="img-fluid rounded"
             src="img/world-clock.png"
-            alt="weather app"
+            alt="world clock java HTML"
           />
         </div>
       </div>
@@ -124,20 +125,30 @@
         </div>
       </div>
       <div class="mail text-center">
-        <a href="mailto:piera.bellelli@gmail.com">piera.bellelli@gmail.com</a>
+        <a href="mailto:piera.bellelli@gmail.com" title="Piera Bellelli email"
+          >piera.bellelli@gmail.com</a
+        >
       </div>
 
       <div class="social-links text-center">
         <a
           href="https://www.linkedin.com/in/piera-bellelli-4b6929215/"
           target="_blank"
+          title="Piera Bellelli linkedin"
           ><i class="fa-brands fa-linkedin"></i
         ></a>
 
-        <a href="https://github.com/pierabellelli" target="_blank">
+        <a
+          href="https://github.com/pierabellelli"
+          target="_blank"
+          title="Piera Bellelli github"
+        >
           <i class="fa-brands fa-github"></i
         ></a>
-        <a href="https://www.instagram.com/pierabellelli/" target="_blank"
+        <a
+          href="https://www.instagram.com/pierabellelli/"
+          target="_blank"
+          title="Piera Bellelli instagram"
           ><i class="fa-brands fa-instagram"></i
         ></a>
       </div>
