--- a/work.html
+++ b/work.html
@@ -40,9 +40,15 @@
         <nav class="d-flex justify-content-end">
           <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About Me</a></li>
-            <li class="active"><a href="/work.html">Works</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li>
+              <a href="/about.html" title="Piera Bellelli about">About Me</a>
+            </li>
+            <li class="active">
+              <a href="/work.html" title="Piera Bellelli works">Works</a>
+            </li>
+            <li>
+              <a href="/contact.html" title="Piera Bellelli contact">Contact</a>
+            </li>
           </ul>
         </nav>
       </div>
