--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
           title="Piera Bellelli instagram"
           ><i class="fa-brands fa-instagram"></i
         ></a>
+        <div class="github mb-5 p-2">
+          👩‍💻This website was coded by Piera Bellelli, and is
+          <a
+            href="https://github.com/pierabellelli/Portfolio-project"
+            target="_blank"
+            title="Piera Bellelli github Portfolio"
+            >open-sourced</a
+          >
+        </div>
       </div>
     </footer>
   </body>
