--- a/contact.html
+++ b/contact.html
@@ -92,6 +92,54 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between md-5">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work togheter</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-danger">Contact Me</a>
+          </div>
+        </div>
+        <div class="mail text-center">
+          <a href="mailto:piera.bellelli@gmail.com" title="Piera Bellelli email"
+            >piera.bellelli@gmail.com</a
+          >
+        </div>
+
+        <div class="social-links text-center">
+          <a
+            href="https://www.linkedin.com/in/piera-bellelli-4b6929215/"
+            target="_blank"
+            title="Piera Bellelli linkedin"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+
+          <a
+            href="https://github.com/pierabellelli"
+            target="_blank"
+            title="Piera Bellelli github"
+          >
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/pierabellelli/"
+            target="_blank"
+            title="Piera Bellelli instagram"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <div class="github mb-5 p-2">
+            👩‍💻This website was coded by Piera Bellelli, and is
+            <a
+              href="https://github.com/pierabellelli/Portfolio-project"
+              target="_blank"
+              title="Piera Bellelli github Portfolio"
+              >open-sourced</a
+            >
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
